--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,31 @@
-version: '3.8'
+version: "3.9"
 
 services:
-
-  web:
+  djangoapp:
+    container_name: djangoapp
     build: .
-    command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
-    volumes:
-      - .:/app
-    ports: 
+    ports:
       - "8000:8000"
+    environment:
+      - PG_USER=postgres
+      - PG_PASSWORD=postgres
+      - PG_DB=postgres
+      - PG_PORT=5432
+      - PG_HOST=db
     depends_on:
       - db
-    environment:
-      - DJANGO_SETTINGS_MODULE=project.settings.local
-    
+
   db:
-    image: postgres
-    volumes:
-      - db_data:/var/lib/postgresql/data
+    container_name: db
+    image: postgres:13
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: root
-      POSTGRES_DB: book_db
-      POSTGRES_HOST: db
-      POSTGRES_PORT: 5432
-  
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
 volumes:
-  db_data:
+  pgdata: {}
