--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,8 +1,8 @@
 pipeline {
     agent any
     environment {
-        DOCKER_IMAGE = 'blog_api'
-        DOCKER_TAG = 'latest'
+        DOCKER_IMAGE = 'wilfriedtayou6/blog_api_image'
+        DOCKER_TAG = '1.0'
     }
 
     stages {
@@ -11,8 +11,8 @@ pipeline {
                 git branch: 'main', url: 'https://github.com/muraasra/blog_api.git'
             }
         }
-    }
-    stage('Build Docker Image') {
+   
+        stage('Build Docker Image') {
             steps {
                 script {
                     bat """
@@ -33,3 +33,4 @@ pipeline {
     }
 }
 }
+ }
