--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   djangoapp:
-    container_name: djangoapp
+    container_name: djangoappweb
     build: .
     ports:
       - "8000:8000"
